9-rc-11
    created CHANGELOG.txt
    fixed erase-flash
    changeesp and add-to-export.txt now dynamically pull targets from idf.py --list-targets