@@ -19,12 +19,12 @@ commitHash=commitTAG
 installDate=installDateTAG
 branchData=branchDataTAG
 
-if [ -z $ESPIDF_INSTALLDIR ]; then
-    echo -e "\nFAIL: ESPIDF_INSTALLDIR environment variable not found!\nReinstall via script or manually add to ~/.zshrc\n"
+if [ -z $ESPIDTOOLS_INSTALLDIR ]; then
+    echo -e "\nFAIL: ESPIDFTOOLS_INSTALLDIR environment variable not found!\nReinstall via script or manually add to ~/.zshrc\n"
     exit
 fi
 
-binDir="$ESPIDF_INSTALLDIR/.custom_bin"
+binDir="$ESPIDFTOOLS_INSTALLDIR/.custom_bin"
 
 echo -e "\nTTY devices found in dmesg:"
 COUNTER=0
@@ -43,14 +43,14 @@ echo -e "Set esp target:\n\tOne of: $(getTargets)"
 read esp
 
 # echo -e "\nSetting environment variables\n"
-export PATH="$ESPIDF_INSTALLDIR/.custom_bin:$PATH"
+export PATH="$ESPIDFTOOLS_INSTALLDIR/.custom_bin:$PATH"
 export ESPPORT=$ttyselect
 export ESPBAUD=460800
 export ESPTARGET=$esp
-export examples="$ESPIDF_INSTALLDIR/esp-idf/examples"
+export examples="$ESPIDFTOOLS_INSTALLDIR/esp-idf/examples"
 
 echo -e "Installation Variables:"
-tail -1 "$ESPIDF_INSTALLDIR/version-data.log"
+tail -1 "$ESPIDFTOOLS_INSTALLDIR/version-data.log"
 echo -e "\tesp-idf-toolsversion: $versionData"
 echo -e "\tesp-idf version: $ESP_IDF_VERSION"
 echo -e "\tcommmit hash: $commitHash"
@@ -62,7 +62,7 @@ echo -e "\nEnvironment Variables:"
 echo -e "\tESPBAUD = $ESPBAUD"
 echo -e "\tESPTARGET = $ESPTARGET"
 echo -e "\tESPPORT = $ESPPORT"
-echo -e "\tESPIDF_INSTALLDIR = $ESPIDF_INSTALLDIR"
+echo -e "\tESPIDFTOOLS_INSTALLDIR = $ESPIDFTOOLS_INSTALLDIR"
 echo -e "\tESP_IDF_VERSION = $ESP_IDF_VERSION"
 echo -e "\tbinDir = $binDir"
 echo -e "\texamples = $examples"
@@ -73,8 +73,8 @@ alias changebaud="source $binDir/changebaud.sh"
 alias changeesp="source $binDir/changeesp.sh"
 alias exit-esp-tools="source $binDir/exit-esp-tools.sh"
 
-# echo -e "Changing dir to $ESPIDF_INSTALLDIR"
-cd $ESPIDF_INSTALLDIR
+# echo -e "Changing dir to $ESPIDFTOOLS_INSTALLDIR"
+# cd $ESPIDFTOOLS_INSTALLDIR
 
 echo -e "\nesp-idf version: $ESP_IDF_VERSION commit $commitHash from branch $branchData"
 
