@@ -1,7 +1,7 @@
-echo "esp-idf-tools install dir: $ESPIDF_INSTALLDIR"
-echo "esp-idf-tools custom_bin dir: $ESPIDF_INSTALLDIR/.custom_bin/"
-echo "esp-idf-tools version: $(cat $ESPIDF_INSTALLDIR/.custom_bin/version.txt)"
-echo "esp-idf-tools last install: $(tail -1 $ESPIDF_INSTALLDIR/version-data.log)"
+echo "esp-idf-tools install dir: $ESPIDFTOOLS_INSTALLDIR"
+echo "esp-idf-tools custom_bin dir: $ESPIDFTOOLS_INSTALLDIR/.custom_bin/"
+echo "esp-idf-tools version: $(cat $ESPIDFTOOLS_INSTALLDIR/.custom_bin/version.txt)"
+echo "esp-idf-tools last install: $(tail -1 $ESPIDFTOOLS_INSTALLDIR/version-data.log)"
 echo "esp-idf path: $IDF_PATH"
 echo "esp-idf version: $ESP_IDF_VERSION"
 echo "esp-idf python path: $IDF_PYTHON_ENV_PATH"
