@@ -1,4 +1,4 @@
-unset ESPIDF_INSTALLDIR
+unset ESPIDFTOOLS_INSTALLDIR
 unset IDF_PATH
 unset ESP_IDF_VERSION
 unset IDF_PYTHON_ENV_PATH
