@@ -103,7 +103,7 @@ Features:
 	`create-project` alone prompts for a project name
 		`create-project <project name>` creates a project with <project name>
 			ex. `create-project hello-world`
-	`esp-install-monitor` monitors install.log. alias for `tail -n 75 -f $ESPIDF_INSTALLDIR/install.log`
+	`esp-install-monitor` monitors install.log. alias for `tail -n 75 -f $ESPIDFTOOLS_INSTALLDIR/install.log`
 	`esp-install-logs` displays full text of install.log and version-data.txt
 	`$examples` is a shortcut for examples directory in esp-idf
 		ex. cd $examples`
