@@ -1,8 +1,0 @@
-esp32
-esp32s2
-esp32c3
-esp32s3
-esp32c2
-esp32c6
-esp32h2
-esp32p4
